added blocks to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,11 @@
    {% if message %}
       <div class="message-container"></div>
    {% endif % }
+
+   {% block page_header %}
+   {% endblock %}
+
+   {% block postloadjs %}
 </body>
 
 </html>
