completed homepage header and css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,7 +27,7 @@ body {
     width: fit-content;
 }
 
-.shop-now-button {
+.join-now-button {
     background: black;
     color: white;
     min-width: 260px;
