--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,6 +20,36 @@
                 and a vibrant community of like-minded individuals ready to support and inspire you. We believe that achieving your fitness goals should be an enjoyable and fulfilling experience,and that's exactly what we're here to provide. 
                 Join us on this transformative adventure towards a fitter, stronger, and more energetic you. Let's make fitness a way of life, together. Welcome to Fitness Galore where your wellness journey begins.
                 </h1>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="static/images/dumbells.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/images/skipping rope.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/images/gym equipment.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </button>
+                  </div>
+                  <div>
+                    <h4 class="">What we do</h4>
+                    <h4 class="">Our Reviews</h4>
+                  </div>
                 <div class="my-5 text-center">
                     <h3>Join Our Community</h3>
                     <h4 class="text-center mt-3"> 
