--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <div class="row h-100">
             <div class="col-12 ">
                 <h1 class="display-4 logo-font text-black text-intro">
-               <h3 class="mt-3">Welcome to Fitness Galore, your ultimate destination for a healthier and happier you. </h3> 
+               <h3 class="mt-3 text-center">Welcome to Fitness Galore, your ultimate destination for a healthier and happier you. </h3> 
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -44,7 +44,7 @@
                   <div class="container text-center mt-5">
                     <div class="row align-items-start">
                       <div class="col">
-                        <h4 class="">What we do</h4>
+                        <h4 class="">About Us</h4>
                         <p>At Fitness Galore, we're more than just a website;
                             we're your dedicated partner on your journey to improved well-being.  Whether you're a seasoned fitness pro or just starting your path to a healthier lifestyle,
                             we've got you covered. Our platform is brimming with expert advice, top-notch health products, customized nutrition plans,
