--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,13 +1,13 @@
-html{
-    height:100%;
+html {
+    height: 100%;
 }
 
 body {
-    background:url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
-    background-size:cover;
-    height:calc(100vh-164px);
-    color:#555;
-    font-family: 'Lato' ;
+	background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+	background-size: cover;
+    height: calc(100vh - 164px);
+    color: #555;
+    font-family: "Lato";
 }
 
 /* from Bulma */
@@ -27,7 +27,7 @@ body {
     width: fit-content;
 }
 
-.join-now-button {
+.shop-now-button {
     background: black;
     color: white;
     min-width: 260px;
@@ -50,18 +50,45 @@ body {
 
 .text-black {
     color: #000 !important;
-   
-}
-
-.text-intro{
-    font-size:20px;
 }
 
 .border-black {
     border: 1px solid black !important;
 }
 
-/* -------------------------------- Media Queries */
+.bg-black {
+    background: #000 !important;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
+}
+a.category-badge > span.badge:hover{
+    background: #212529 !important;
+    color: #fff !important;
+}
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+
+}
+.btt-link{
+    cursor: pointer;
+}
+
+
+
+/* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
