--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,32 +15,32 @@
             <div class="col-12 ">
                 <h1 class="display-4 logo-font text-black text-intro">
                <h3 class="mt-3 text-center">Welcome to Fitness Galore, your ultimate destination for a healthier and happier you. </h3> 
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="static/images/dumbells.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/images/skipping rope.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="static/images/gym equipment.jpg" class="d-block w-100" alt="...">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </button>
+               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="static/images/dumbells.jpg" class="d-block w-100" alt="...">
                   </div>
+                  <div class="carousel-item">
+                    <img src="static/images/skipping rope.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="static/images/gym equipment.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </button>
+              </div>
                   <div class="container text-center mt-5">
                     <div class="row align-items-start">
                       <div class="col">
@@ -90,5 +90,50 @@
             </div>
         </div>
     </div>
+    <footer class="container-fluid">
+        <div class="col-12 text-center">
+               <h5 class="uppercase general-sub footer-copyright"> &copy;Fitness Galore </h5>
+               <ul class="list-inline social-links">
+                   <li class="list-inline-item ">
+                       <a target="_blank" href="#">
+                           <i class="fa fa-facebook" aria-hidden="true"></i>
+                           <span class="sr-only">Facebook</span>
+                       </a>
+                   </li>
+                   <li class="list-inline-item ">
+                       <a target="_blank" href="#">
+                           <i class="fa fa-twitter" aria-hidden="true"></i>
+                           <span class="sr-only">Twitter</span>
+                       </a>
+                   </li>
+                   <li class="list-inline-item ">
+                       <a target="_blank" href="#">
+                           <i class="fa fa-linkedin" aria-hidden="true"></i>
+                           <span class="sr-only">LinkedIn</span>
+                       </a>
+                   </li>
+                   <li class="list-inline-item ">
+                       <a target="_blank" href="#">
+                           <i class="fa fa-pinterest" aria-hidden="true"></i>
+                           <span class="sr-only">Pinterest</span>
+                       </a>
+                   </li>
+                   <li class="list-inline-item ">
+                       <a target="_blank" href="#">
+                           <i class="fa fa-instagram" aria-hidden="true"></i>
+                           <span class="sr-only">Instagram</span>
+                       </a>
+                   </li>
+                   <li class="list-inline-item ">
+                       <a target="_blank" href="#">
+                           <i class="fa fa-youtube" aria-hidden="true"></i>
+                           <span class="sr-only">YouTube</span>
+                       </a>
+                   </li>
+               </ul>
+           </div>
+       </div>
+   </footer>
+
  
 {% endblock %}
