--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -15,6 +15,7 @@
                 <a href="" class="dropdown-item">Workout Equipment</a>
                 <a href="" class="dropdown-item">Workout Clothing</a>
                 <a href="" class="dropdown-item">Sports Nutrition</a>
+                <a href="" class="dropdown-item">Deals</a>
             </div>
         </li>
 
