--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-      
+
 }
 
 /* from Bulma */
@@ -65,9 +65,9 @@ body {
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
-  .container {
-    max-width: 80%;
-  }
+    .container {
+        max-width: 80%;
+    }
 }
 
 /* fixed top navbar only on medium and up */
@@ -80,6 +80,17 @@ body {
         z-index: 1030;
     }
 
+    /* pad the top a bit when navbar is collapsed on mobile */
+    @media (max-width: 991px) {
+        .header-container {
+            padding-top: 116px;
+        }
+
+        body {
+            height: calc(100vh - 116px);
+        }
+    }
+
     .header-container {
         padding-top: 164px;
     }
@@ -89,7 +100,7 @@ footer {
     background-color: #525252;
     color: #fafafa;
     margin-top: auto;
-   }
+}
 
 
 .social-links {
@@ -102,11 +113,11 @@ footer {
     padding: 12px 0;
     border-radius: 50%;
     font-size: 13px;
-   
+
     text-align: center;
     color: #fafafa;
     background: #8f8f8f;
-    
+
 }
 
 .social-links li a i:hover {
