--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,45 +1,68 @@
 <div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav w-auto mx-auto">
-        <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Home
-            </a>
-        </li>
+  <ul class="navbar-nav w-auto mx-auto">
+    <li class="nav-item dropdown">
+      <a
+        class="logo-font font-weight-bold nav-link text-black mr-5"
+        href="#"
+        id=""
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        Products
+      </a>
+      <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
+        <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+        <a href="" class="dropdown-item">Vitamins & Supplements</a>
+        <a href="" class="dropdown-item">Workout Equipment</a>
+        <a href="" class="dropdown-item">Workout Clothing</a>
+        <a href="" class="dropdown-item">Sports Nutrition</a>
+        <a href="" class="dropdown-item">Deals</a>
+      </div>
+    </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Products
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Vitamins & Supplements</a>
-                <a href="" class="dropdown-item">Workout Equipment</a>
-                <a href="" class="dropdown-item">Workout Clothing</a>
-                <a href="" class="dropdown-item">Sports Nutrition</a>
-                <a href="" class="dropdown-item">Deals</a>
-            </div>
-        </li>
+    <li class="nav-item dropdown">
+      <a
+        class="logo-font font-weight-bold nav-link text-black mr-5"
+        href="#"
+        id=""
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        Nutrition Plans
+      </a>
+      <div class="dropdown-menu border-0" aria-labelledby="">
+        <a href="" class="dropdown-item">Nutrition Plan 1</a>
+        <a href="" class="dropdown-item">Nutrition Plan 2</a>
+        <a href="" class="dropdown-item">Nutrition Plan 3</a>
+      </div>
+    </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Nutrition Plans
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="">
-                <a href="" class="dropdown-item">Nutrition Plan 1</a>
-                <a href="" class="dropdown-item">Nutrition Plan 2</a>
-                <a href="" class="dropdown-item">Nutrition Plan 3</a>
-            </div>
-        </li>
+    <li class="nav-item">
+      <a
+        class="logo-font font-weight-bold nav-link text-black"
+        href="#"
+        id=""
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        Fitness Advice
+      </a>
+    </li>
 
-        <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Fitness Advice
-            </a>
-         </li>
-
-        <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Our Community
-            </a>
-        </li>
-    </ul>
+    <li class="nav-item">
+      <a
+        class="logo-font font-weight-bold nav-link text-black"
+        href="#"
+        id=""
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        Our Community
+      </a>
+    </li>
+  </ul>
 </div>
