--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,17 @@
 <div class="collapse navbar-collapse" id="main-nav">
   <ul class="navbar-nav w-auto mx-auto">
     <li class="nav-item dropdown">
+        <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+           All Products
+        </a>
+    <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+        <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+        <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+    </div>
+    </li>
+
+    <li class="nav-item dropdown">
       <a
         class="logo-font font-weight-bold nav-link text-black mr-5"
         href="#"
@@ -12,7 +23,6 @@
         Products
       </a>
       <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-        <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
         <a href="{% url 'products' %}?category=vitamins_supplements" class="dropdown-item">Vitamins & Supplements</a>
         <a href="{% url 'products' %}?category=workout equipment" class="dropdown-item">Workout Equipment</a>
         <a href="{% url 'products' %}?category=workout clothing" class="dropdown-item">Workout Clothing</a>
