--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,9 +39,9 @@ body {
     color: white;
 }
 
-.shop-now-button:hover,
-.shop-now-button:active,
-.shop-now-button:focus,
+.join-now-button:hover,
+.join-now-button:active,
+.join-now-button:focus,
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
@@ -59,6 +59,20 @@ body {
 
 .bg-black {
     background: #000 !important;
+}
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
+}
+
+a.category-badge>span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
 }
 
 /* --------------------------------- Media queries */
