--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -17,8 +17,8 @@
             <h2 class="logo-font">Products</h2>
             {% for c in current_categories %}
             <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name
-                    }}</span>
+                <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ 
+                    c.friendly_name}}</span>
             </a>
             {% endfor %}
             <hr class="w-50 mb-1">
@@ -37,10 +37,6 @@
                                 (low to high)</option>
                             <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price
                                 (high to low)</option>
-                            <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating
-                                (low to high)</option>
-                            <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>
-                                Rating (high to low)</option>
                             <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)
                             </option>
                             <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name
@@ -128,8 +124,6 @@
     </div>
 </div>
 
-
-
 <footer class="container-fluid">
     <div class="col-12 text-center">
         <h5 class="uppercase general-sub footer-copyright"> &copy;Fitness Galore </h5>
@@ -176,4 +170,36 @@
 </footer>
 
 
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript">
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0);
+    })
+</script>
+
+<script type="text/javascript">
+    $('#sort-selector').change(function () {
+        var selector = $(this);
+        var currentUrl = new URL(window.location);
+
+        var selectedVal = selector.val();
+        if (selectedVal != "reset") {
+            var sort = selectedVal.split("_")[0];
+            var direction = selectedVal.split("_")[1];
+
+            currentUrl.searchParams.set("sort", sort);
+            currentUrl.searchParams.set("direction", direction);
+
+            window.location.replace(currentUrl);
+        } else {
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
+
+            window.location.replace(currentUrl);
+        }
+    })
+</script>
 {% endblock %}
