--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load static %}
 
 <!doctype html>
 <html lang="en">
@@ -92,7 +91,7 @@
                     </li>
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="">
+                            href="{% url 'view_bag' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
@@ -118,7 +117,7 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-       
+      
     </header>
 
     {% if messages %}
