--- a/exercise_plans/templates/exercise/exercise_plans.html
+++ b/exercise_plans/templates/exercise/exercise_plans.html
@@ -22,22 +22,32 @@
         </div>
     </div>
     <div class="row">
-        <div class="meal-container col-10 offset-1">
+        <div class="exercise-container col-10 offset-1">
             <div class="row mt-1 mb-2"></div>
             <div class="row">
                 {% for exercise in exercises %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100 border-0">
-
-                <h3>{{ day.day_name }}</h3>
-                <ul>
-                <li>
-                {{ exercise.name }} -
-                Duration: {{ exercise.duration }},
-                Intensity: {{ exercise.intensity }}
-                </li>
-
-                 </ul>
+                                {% if exercise.image %}
+                                <a href="{% url 'exercise_plans' exercise.id %}">
+                                    <img class="card-img-top img-fluid" src="{{ exercise.image.url }}" alt="{{ exercise.name }}">
+                                </a>
+                                {% else %}
+                                <a href="{% url 'exercise_plans' exercise.id %}">
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ exercise.name }}">
+                                </a>
+                                {% endif %}
+                                <div class="card-body pb-0">
+                                    <h3>{{ day.day_name }}</h3>
+                                    <p class="mb-0">{{ exercise.name }}</p>
+                                    <p class="mb-0"> {{ exercise.duration }}</p>
+                                    <p class="mb-0"> {{ exercise.intensity }}</p>
+                                    <p class="mb-0"> {{ exercise.goal }}</p>
+                                    <p class="mb-0"> {{ exercise.sets}}</p>
+                                    <p class="mb-0"> {{ exercise.reps}}</p>
+                                </div>
+                            </div>
+                        </div>
                   </div>
                 </div>
                 {% if forloop.counter|divisibleby:1 %}
@@ -60,7 +70,7 @@
                     <hr>
                 </div>
                 {% endif %}
-
+                {% endfor %}
             </div>
         </div>
     </div>
