--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -91,6 +91,17 @@
         </div>
     </div>
     <footer class="container-fluid">
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>About Us</h3>
+                <p>Discover the best fitness experience. We are committed to helping you achieve your fitness
+                    goals.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Email: info@fitnessadvice.com</p>
+                <p>Phone: +1 (123) 456-7890</p>
+            </div>
         <div class="col-12 text-center">
                <h5 class="uppercase general-sub footer-copyright"> &copy;Fitness Galore </h5>
                <ul class="list-inline social-links">
@@ -132,6 +143,9 @@
                    </li>
                </ul>
            </div>
+            <div class="copyright">
+                <p>&copy; 2023 Fitness Gym. All Rights Reserved.</p>
+            </div>
        </div>
    </footer>
 
