--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -80,7 +80,7 @@
         aria-haspopup="true"
         aria-expanded="false"
       >
-        Our Community
+      Blog
       </a>
     </li>
   </ul>
