--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,7 +32,7 @@
     </li>
 
      <li class="nav-item">
-      <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'exercise_plans' %}?category=exercise" >
+      <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'exercise' %}?category=exercise" >
         Exercise Plans
       </a>
      
