added signup/subcription form to community app

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -63,7 +63,7 @@
 
     <li class="nav-item">
       <a class="logo-font font-weight-bold nav-link text-black"
-        href="#" >
+        href="{% url 'join_community:signup' %}" >
        Join Community
       </a>
       </li>
