adjusted footer position

--- a/join_community/templates/join_community/success.html
+++ b/join_community/templates/join_community/success.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2>Success</h2>
+    <h2 class="logo-font
+    ">Success</h2>
     <p class="alert alert-success">You have successfully subscribed!</p>
 </div>
 {% endblock %}
