--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,5 +5,5 @@
 <h2>{{ post.title }}</h2>
 <p>{{ post.content }}</p>
 <p>Published on: {{ post.pub_date }}</p>
-<p> {{ post.author}}</p>
+<p> By: {{ post.author}}</p>
 {% endblock %}
