--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4">Blog</h2>
+    <h2 class="logo-font mb-4">Blog</h2>
     <div class="row">
         {% for post in posts %}
         <div class="col-md-6 mb-4">
