--- a/join_community/templates/join_community/signup.html
+++ b/join_community/templates/join_community/signup.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2>Sign Up</h2>
+    <h2 class="logo-font">Sign Up</h2>
     <form method="post" action="{% url 'join_community:signup' %}" class="mb-3">
         {% csrf_token %}
         {{ form.as_p }}
