--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,9 +5,10 @@ html {
 body {
     background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
      background-size: cover;
-    height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
+    position: relative;
+        min-height: 100vh;
         }
       
 
