created contact page

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -63,8 +63,8 @@
 
     <li class="nav-item">
       <a class="logo-font font-weight-bold nav-link text-black"
-        href="{% url 'join_community:signup' %}" >
-       Join Community
+        href="{% url 'contact_view' %}" >
+       Contact
       </a>
       </li>
   </ul>
