--- a/exercise_plans/templates/exercise/exercise_plans.html
+++ b/exercise_plans/templates/exercise/exercise_plans.html
@@ -22,11 +22,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="exercise-container col-10 offset-1">
+        <div class="exercise-container ">
             <div class="row mt-1 mb-2"></div>
             <div class="row">
                 {% for exercise in exercises %}
-                  <div class="col-md-6 mb-4">
+                  <div class="col-md-6 mb-4 col-lg-4 ">
                       <div class="card">
                           <div class="card-body">
                               {% if exercise.image %}
