--- a/templates/base.html
+++ b/templates/base.html
@@ -150,6 +150,8 @@
     </script>
     {% endblock %}
 
+    <!---
+
     <footer class="container-fluid">
         <div class="footer-container">
             <div class="footer-section">
@@ -211,4 +213,4 @@
 
 </body>
 
-</html>
+</html> ->
