--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,8 +3,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-5">
-    <h2 class="logo-font mb-4">Blog</h2>
+<div class="container ">
+    <h2>Blog</h2>
     <div class="row">
         {% for post in posts %}
         <div class="col-md-6 mb-4">
