--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,14 +3,14 @@
 
 {% block content %}
 
-<div class="overlay ">
-   <div class="container-fluid">
-    <h2>Blog</h2>
+
+<div class="container-fluid page-top-margin">
+    <h2 class="text-align-center">Blog</h2>
     <div class="row">
         {% for post in posts %}
-        <div class="col-md-6 mb-4 blog-container">
+        <div class="col-md-6 mb-4 ">
             <div class="card">
-                <div class="card-body">
+                <div>
                     <h3 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
                     <p class="card-text">{{ post.author }}</p>
                     <p class="card-text">{{ post.content }}</p>
@@ -20,6 +20,5 @@
         </div>
         {% endfor %}
     </div>
-  </div>
 </div>
 {% endblock %}
