--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 
-<div class="container">
-<h2 class=" contact-header">Contact Us</h2>
+<div class="container-fluid page-top-margin">
+<h2 class="text-align-center">Contact Us</h2>
 
 <form method="post" action="{% url 'contact_view' %}"
-    class="col-sm-6 mx-auto contact-form">
+    class="col-sm-6 mx-auto">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="container btn btn-secondary btn-sm ">Submit</button>
