--- a/static/css/base.css
+++ b/static/css/base.css
@@ -334,25 +334,29 @@ input[name='q']::placeholder {
 }
 
 
-.contact-header{
-    position:relative;
-    top:130px;
-    left:520px;
+.page-top-margin{
+   margin-top: 200px;
 }
 
-.contact-form{
-    position: relative;
-     top: 170px;
-     left:30px;
+.text-align-center {
+    text-align: center;
 }
 
 .blog-container{
-    position: relative !important;
-    top: 70%;
-    left: 70%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height:50%;
+ max-width:1200px;
+ margin: auto;
+}
+
+.card-body{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+
+}
+
+.card-body div{
+   padding: 10px;
+   border-radius: 5px;
 }
 
 /*footer {
