Edited contact page blog page and exercise plans

--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -4,8 +4,9 @@
 
 {% block content %}
 
-<div class="container-fluid page-top-margin">
-<h2 class="text-align-center">Contact Us</h2>
+<div class="container-fluid">
+<h2 class="text-center mt-3">Contact Us</h2>
+<p>For any queries</p>
 
 <form method="post" action="{% url 'contact_view' %}"
     class="col-sm-6 mx-auto">
