--- a/exercise_plans/templates/exercise/exercise_plans_detail.html
+++ b/exercise_plans/templates/exercise/exercise_plans_detail.html
@@ -10,10 +10,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
+
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <div class="col-md-6 mb-4">
             <div class="image-container my-5">
                 {% if exercise.image %}
                 <a href="{{ exercise.image.url }}" target="_blank">
@@ -26,7 +26,7 @@
                 {% endif %}
             </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-md-6 mb-4">
             <div class="exercise-details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ exercise.name }}</p>
                 {% if exercise.category %}
