--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -58,7 +58,7 @@
       </div>
     </li>
      <li class="nav-item">
-         <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'post_list' %}">Blog</a>
+         <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'post_list' %}">Blogs</a>
      </li>
 
     <li class="nav-item">
