Working on Images for exercise plans

--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid">
 <h2 class="text-center mt-3">Contact Us</h2>
-<p>For any queries</p>
+<p class="text-center mt-3">For any queries</p>
 
 <form method="post" action="{% url 'contact_view' %}"
     class="col-sm-6 mx-auto">
