--- a/exercise_plans/templates/exercise/exercise_plans_detail.html
+++ b/exercise_plans/templates/exercise/exercise_plans_detail.html
@@ -4,7 +4,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col"></div>
+        <div class="col-sm-6"></div>
     </div>
 </div>
 {% endblock %}
@@ -13,7 +13,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6 mb-4">
+        <div class="col-sm-6">
             <div class="image-container my-5">
                 {% if exercise.image %}
                 <a href="{{ exercise.image.url }}" target="_blank">
@@ -26,7 +26,7 @@
                 {% endif %}
             </div>
         </div>
-        <div class="col-md-6 mb-4">
+        <div class="col-12 col-lg-6">
             <div class="exercise-details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ exercise.name }}</p>
                 {% if exercise.category %}
@@ -45,6 +45,4 @@
         </div>
     </div>
 </div>
-
-
 {% endblock %}
